--- a/package.json
+++ b/package.json
@@ -31,6 +31,10 @@
     "webpack-dev-server": "^3.1.8"
   },
   "dependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/plugin-proposal-decorators": "^7.4.4",
+    "mobx": "^5.13.0",
+    "mobx-react": "^6.1.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
   }
